/ to images to see if they are not visible

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <body>
                 Once cooked it should look like this.
             </body>
-            <img src="../odin-links-and-images/images/tuna-tomato-pasta.jpg" alt="Tuna Pasta">
+            <img src="tuna-tomato-pasta.jpg" alt="Tuna Pasta">
 
             <br>
             <p>
@@ -28,7 +28,7 @@
                 Let it cook on each side for 3 minutes and let it rest for 5 minutes afterwards.
                 You can finally get your and <strong>enjoy your meat</strong>
             </p>
-            <img src="../odin-links-and-images/images/medium-rare-steak.jpg" alt="Steak">
+            <img src=".medium-rare-steak.jpg" alt="Steak">
         </body>
     </head>
 </html>
