New fixed index

--- a/index.html
+++ b/index.html
@@ -8,27 +8,16 @@
             <h1>
                 Recipes for making quick and easy dinners 
             </h1>
-            <br>
-            <p>
-                So today we're going to make a quick and easy tuna pasta
-                Drain the tuna and start boiling water, once it starts boiling add salt and a portion of the pasta of your choice.
-                For best results let it cook for 6-7 minutes. ( (Al dente ;) )
-                Once ready add tomate sauce and the tuna into a bowl and mix.
-            </p>
-            <br>
-            <body>
-                Once cooked it should look like this.
-            </body>
-            <img src="tuna-tomato-pasta.jpg" alt="Tuna Pasta">
-
-            <br>
-            <p>
-                Maybe we should add another recipe but I don't know I'm kinda tired but fuck it.
-                So we're going to make steak. Simply buy your choice of meat on a medium hot pan and season the meat with salt, pepper and a little bit of rosemmary and garlic.
-                Let it cook on each side for 3 minutes and let it rest for 5 minutes afterwards.
-                You can finally get your and <strong>enjoy your meat</strong>
-            </p>
-            <img src=".medium-rare-steak.jpg" alt="Steak">
+            <ul>
+                <li>
+                    <a href="tuna-pasta.html">Tuna Pasta</a>
+                    
+                </li>
+                <li>
+                    <a href="steak.html">Steak</a>
+                </li>
+            </ul>
+            
         </body>
     </head>
 </html>
