Final version hopefully

--- a/steak.html
+++ b/steak.html
@@ -1,13 +1,23 @@
-<h1>
-    Steak
-    <strong>
-        Description
-    </strong>
-    <p>
-        Maybe we should add another recipe but I don't know I'm kinda tired but fuck it.
-        So we're going to make a steak. Simply buy your choice of meat and put it on a medium hot pan and season the meat with salt, pepper and a little bit of rosemary and garlic.
-        Let it cook on each side for 3 minutes and let it rest for 5 minutes afterwards.
-        You can finally<strong>enjoy your meat</strong>
-    </p>
-    <img src="medium-rare-steak.jpg" alt="Steak">
-</h1>
+<html>
+    <head>
+        <title>
+            Steak for dinner!
+        </title>
+        <body>
+            <h1>
+                Steak
+                <br>
+                <strong>
+                    Description
+                </strong>
+                <p>
+                    Maybe we should add another recipe but I don't know I'm kinda tired but fuck it.
+                    So we're going to make a steak. Simply buy your choice of meat and put it on a medium hot pan and season the meat with salt, pepper and a little bit of rosemary and garlic.
+                    Let it cook on each side for 3 minutes and let it rest for 5 minutes afterwards.
+                    You can finally<strong> enjoy your meat</strong>
+                </p>
+                <img src="medium-rare-steak.jpg" alt="Steak">
+            </h1>
+        </body>
+    </head>
+</html>
