Index is finally fixed

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </strong>
             <ul>
                 <li>
-                    Tuna Pasta
+                    Steak
                     <a href="steak.html">Steak</a>
                 </li>
                 <li>
-                    Steak
+                    Tuna
                     <a href="tuna-pasta.html">Tuna Pasta</a>
                 </li>
             </ul>
