Final final version

--- a/steak.html
+++ b/steak.html
@@ -8,7 +8,7 @@
                 Steak
                 <br>
                 <strong>
-                    Description
+                    Description:
                 </strong>
                 <p>
                     Maybe we should add another recipe but I don't know I'm kinda tired but fuck it.
