--- a/tuna-pasta.html
+++ b/tuna-pasta.html
@@ -7,7 +7,7 @@
             Tuna pasta :) 
             <br>
             <strong>
-                Description
+                Description:
             </strong>
             <p>
                 So today we're going to make a quick and easy tuna pasta
