new recipes with css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Recipes!!!
         </title>
+        <link rel="stylesheet" href="style.css">
         <body>
             <h1>
                 Recipes for making quick and easy dinners 
@@ -13,10 +14,10 @@
             </strong>
             <ul>
                 <li>
-                    <a href="steak.html">Steak</a>
+                    <a class="one" href="steak.html">Steak</a>
                 </li>
                 <li>
-                    <a href="tuna-pasta.html">Tuna Pasta</a>
+                    <a class="two" href="tuna-pasta.html">Tuna Pasta</a>
                 </li>
             </ul>
         </body>
