New and improved recipe

--- a/steak.html
+++ b/steak.html
@@ -1,16 +1,16 @@
 <html>
     <head>
-        <title>
+        <title style="font-weight: 500;">
             Steak for dinner!
         </title>
-        <body>
-            <h1>
+        <body style="background-color: indigo;">
+            <h1 style="color: paleturquoise; font-size: 34px; font-family: 'Courier New', Courier, monospace;">
                 Steak
                 <br>
                 <strong>
                     Description:
                 </strong>
-                <p>
+                <p style="color:bisque; font-size: bold;">
                     Maybe we should add another recipe but I don't know I'm kinda tired but fuck it.
                     So we're going to make a steak. Simply buy your choice of meat and put it on a medium hot pan and season the meat with salt, pepper and a little bit of rosemary and garlic.
                     Let it cook on each side for 3 minutes and let it rest for 5 minutes afterwards.
