--- a/tuna-pasta.html
+++ b/tuna-pasta.html
@@ -1,21 +1,21 @@
 <html>
     <head>
-        <title>
+        <title style="font-weight: 500;">
             Tuna pasta baby
         </title>
-        <h1>
+        <h1 style="color:darkgoldenrod; font-family: Arial, Helvetica, sans-serif; font-weight: 400;">
             Tuna pasta :) 
             <br>
             <strong>
                 Description:
             </strong>
-            <p>
+            <p style="color: lightcyan; font-family: Georgia, 'Times New Roman', Times, serif; font-size: bold;">
                 So today we're going to make a quick and easy tuna pasta
                 Drain the tuna and start boiling water, once it starts boiling add salt and a portion of the pasta of your choice.
                 For best results let it cook for 6-7 minutes. ( (Al dente ;) )
                 Once ready add tomate sauce and the tuna into a bowl and mix.
             </p>
-            <body>
+            <body style="background-color: maroon;">
                 Once cooked it should look like this.
             </body>
             <img src="tuna-tomato-pasta.jpg" alt="Tuna Pasta">
